--- a/dev/开发问题.md
+++ b/dev/开发问题.md
@@ -4,7 +4,7 @@
 
 - [] option_id的含义不一。在param.awk的代码中, option_id始往终表示 `--repo|-r|r`，但是在advise中，还可以表示 `.<分隔>repo<分隔>--repo|-r|r`，应该改名为 option_keypath
 - [] option_id除了表示 option，还可以是subcmd。
-
+- [x] `RULE_ID_R[ option_id ] = 100`: RULE_ID_R中的值，除了是false(0), true(1), 还有100。应该给100一个语义化的常量。
 
 # 例子
 
